# Loan-Amount-Prediction

./: .dockerignore  .gitattributes  .gitignore  =  Dockerfile  Loan_app.py  README.md  app.py  loan_app.py  main.py  mlflow.db  params.yaml  pyproject.toml  requirements.txt  schema.yaml  setup.py  template.py  train.py
artifacts/data_transformation/: test.csv  train.csv
artifacts/model_evaluation/: metrics.json
config/: config.yaml
mlruns/0/: meta.yaml
mlruns/0/00b966105fde43f9a78cee142af707f7/: meta.yaml
mlruns/0/0241d67221b04dfa8fa359a8c4085563/: meta.yaml
mlruns/0/03c5389145484c3bb0f402d9c13c284b/: meta.yaml
mlruns/0/04062eee575d4ca998ae12a3ba2fe8b2/: meta.yaml
mlruns/0/064ecb46b18e4c55b724fce7283223b1/: meta.yaml
mlruns/0/092d2412a2f148e1a5c8627521455f2c/: meta.yaml
mlruns/0/0f7c9352c3ab4d79a642c3260373397b/: meta.yaml
mlruns/0/1076d2bfd24b42e4b271adc244bcde74/: meta.yaml
mlruns/0/1083ba0bb5014e50881223b753b319e0/: meta.yaml
mlruns/0/12a6497eda424d71ae1110424d68da8e/: meta.yaml
mlruns/0/1388fb9acf704b668c78f524ff1d80cc/: meta.yaml
mlruns/0/140a605ca0024bf1864027f8b830429f/: meta.yaml
mlruns/0/1cf10253ce274b3488cffb8ea9cb219f/: meta.yaml
mlruns/0/1e8abe1a5b0d4ae0be11ca5326e22fcc/: meta.yaml
mlruns/0/1fd5502cb9f44c96aa6844c2cf9baf3a/: meta.yaml
mlruns/0/23fb37d628f44024828fed8d39c5a874/: meta.yaml
research/: 01_data_ingestion.ipynb  02_data_validation.ipynb  03_data_transformation.ipynb  04_model_trainer.ipynb  05_model_evaluation.ipynb  trials.ipynb  trying.py
templates/: index.html  results.html
(+463 files in other folders)
